@@ -19,7 +19,6 @@ package org.springframework.cloud.kubernetes.commons.config;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -60,7 +59,7 @@ public record SecretsConfigProperties(boolean enableApi, @DefaultValue Map<Strin
 
 			if (!labels.isEmpty()) {
 				result.add(new LabeledSecretNormalizedSource(this.namespace, this.labels, this.failFast,
-						ConfigUtils.Prefix.DEFAULT, false));
+						ConfigUtils.Prefix.DEFAULT));
 			}
 			return result;
 		}
@@ -68,7 +67,7 @@ public record SecretsConfigProperties(boolean enableApi, @DefaultValue Map<Strin
 		return this.sources.stream()
 			.flatMap(s -> s.normalize(this.name, this.namespace, this.labels, this.includeProfileSpecificSources,
 					this.failFast, this.useNameAsPrefix, environment))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
@@ -106,7 +105,7 @@ public record SecretsConfigProperties(boolean enableApi, @DefaultValue Map<Strin
 
 			if (!normalizedLabels.isEmpty()) {
 				NormalizedSource labeledBasedSource = new LabeledSecretNormalizedSource(normalizedNamespace, labels,
-						failFast, prefix, includeProfileSpecificSources);
+						failFast, prefix);
 				normalizedSources.add(labeledBasedSource);
 			}
 
